Update styles and images for product cards and carousel navigation

--- a/index.html
+++ b/index.html
@@ -563,13 +563,17 @@
       <h2>NEW Products</h2>
       <div class="products-body">
         <div class="product-wrapper">
-          <i id="left-new" class="fas fa-angle-left"></i>
-          <i id="right-new" class="fas fa-angle-right"></i>
+          <i id="left-new" class="">
+            <img src="./img/btn-left.png" alt="">
+          </i>
+          <i id="right-new" class="">
+            <img src="./img/btn-right.png" alt="">
+          </i>
           <ul class="products-carousel">
             <li class="card-products">
               <div class="img-products">
                 <img
-                  src="https://s3-alpha-sig.figma.com/img/44bf/fc87/6619f63cc0faa70e438c9e1c9c7165af?Expires=1740355200&Key-Pair-Id=APKAQ4GOSFWCW27IBOMQ&Signature=Xs76dK85BxcGS0GAYJ7lw1nu4e62cpaE9gMnJJ7wAUpX2MpH38bthtjFGmdrLaaQM2bYT-Ai5XNzlrkpp3z9wmWr3OG8OK60VqAb6N0V2UV3p0ZfzqifijNhi~QZhgna6YZFkC3A6Ob-JBEygF3fOycW~aQAmTAr6SfJ691gQlL04pPVLmsV97ONe7GAqdyj1H73Ri5kUhJlJ4T1xExnLQG7Cd6Yuuqt71lYirYsO5COItT8u9BexwStVE6MNCBJ9MdcieWccnZZ9yDi82yQTS8GJ2kX4Fh32Kytyq6pHzwL0SuTMZM5fTrTxwGzeAYkILhNVqsBFCkK1Oxf12gA-A__"
+                src="./img/new1.png"                  
                   alt="Product Img" draggable="false" />
               </div>
               <div class="card-products-body">
@@ -584,7 +588,7 @@
             <li class="card-products">
               <div class="img-products">
                 <img
-                  src="https://s3-alpha-sig.figma.com/img/292c/6a99/394d05a7bb7c8ac00dfc3cf4cf4b118a?Expires=1740355200&Key-Pair-Id=APKAQ4GOSFWCW27IBOMQ&Signature=j~vRrqQxKkm8eKuxqWXHhVGrVmQePlnPT0C4kz20f8L5U8K7dr31Hb-Sip6EPHCj1sgcd6gnzc2ltZ3cJ2jYarW7CKoJpTHZcjYxb9CrWHfp9xzgqICRGMG-dUSGapm-GX7ZmE1MHL6SU~q4fxNzl5qxyzD0Rm4rhzPpg~CjMC53dJGYje~D3jJ4sxaYWNINjVCZfHi~idsTMgfw1d2Ps-h9PTNQEd~n~iK1tImyukZ-UJvBXP5ojnwBOR6VEVKT4xjiVvb~85-TRYUcrUlo6Bn0sQOcpuJruK5YKMjzz4oNSx5Hy6Z31fSO~jF9AzOXLnnivpFBSL3z7R5zLR2eAQ__"
+                src="./img/new2.png"                  
                   alt="Product Img" draggable="false" />
               </div>
               <div class="card-products-body">
@@ -599,7 +603,7 @@
             <li class="card-products">
               <div class="img-products">
                 <img
-                  src="https://s3-alpha-sig.figma.com/img/def7/64fb/b8e83bdbe022eda36b4e6f470ecce4a9?Expires=1740355200&Key-Pair-Id=APKAQ4GOSFWCW27IBOMQ&Signature=CT~2APuZRsgrhmkDHyptdACk~6and4GA2E81YqxmD3A4QNIsBfjVyf~h~dpLnSAjqzX58SkBzHfi1aVr~9sk98OqBb7LV7UgMdYZ3mQnLV7lFW8OKZQcs8PwZz49kcPm6uox4rsnF5MtRZTagBfEwaeKkwKnMdP98eoIm1Ea3pB0VmyabbnZaFTsro7oPsiFhdtlPWEuJ562LEpz~yBrWFTIGNd~yAbklhEHYJQ0LMT2rFql7DtTdEtSnWjTFQ8PmyIbmeMA2bKwJtl4HBcVu78hd83CZoizR1Z2voR0FgLlDBbxI-7x0ksORrAWTxk2O6Fkd2CZRBvzXl465~5l6A__"
+                src="./img/new3.png"                  
                   alt="Product Img" draggable="false" />
               </div>
               <div class="card-products-body">
@@ -614,7 +618,7 @@
             <li class="card-products">
               <div class="img-products">
                 <img
-                  src="https://s3-alpha-sig.figma.com/img/5062/b3d8/cdd5bf4ae528be397beb0a425bdb0e9d?Expires=1740355200&Key-Pair-Id=APKAQ4GOSFWCW27IBOMQ&Signature=KV9YirVMDyNjqVlDnfVrxbL-RvXEdSeM-SibYJ4K~Qt~HkJrFfeHbhnka5cn8izCabZCHObdKSvhYgJgekvbifl0oPwZI8u0W85Bg1MZRSwd7b~C2z~uFom~JZc9QgHITe~x8tb0m35L4PHIItoKQ7Zo9lLqwBcVzpYaS4GFBERabviPX1TrBm~06fVfjSSIvdKnbKpJnF9v6CX0CNDFvWyj5RwX~CDKm4pqI96JI0Tt5yaDYOfnL7PySB22UmrUTt2XPMBloBvBT4Jk8S4FBbDdFuge69YUi19tNmRK7qpIHDMwWrrFxtwte7J7vvHBXEq5-D1~Tv6JnRMG7jKt0Q__"
+                src="./img/new4.png"                  
                   alt="Product Img" draggable="false" />
               </div>
               <div class="card-products-body">
@@ -629,7 +633,7 @@
             <li class="card-products">
               <div class="img-products">
                 <img
-                  src="https://s3-alpha-sig.figma.com/img/44bf/fc87/6619f63cc0faa70e438c9e1c9c7165af?Expires=1740355200&Key-Pair-Id=APKAQ4GOSFWCW27IBOMQ&Signature=Xs76dK85BxcGS0GAYJ7lw1nu4e62cpaE9gMnJJ7wAUpX2MpH38bthtjFGmdrLaaQM2bYT-Ai5XNzlrkpp3z9wmWr3OG8OK60VqAb6N0V2UV3p0ZfzqifijNhi~QZhgna6YZFkC3A6Ob-JBEygF3fOycW~aQAmTAr6SfJ691gQlL04pPVLmsV97ONe7GAqdyj1H73Ri5kUhJlJ4T1xExnLQG7Cd6Yuuqt71lYirYsO5COItT8u9BexwStVE6MNCBJ9MdcieWccnZZ9yDi82yQTS8GJ2kX4Fh32Kytyq6pHzwL0SuTMZM5fTrTxwGzeAYkILhNVqsBFCkK1Oxf12gA-A__"
+                src="./img/new1.png"                  
                   alt="Product Img" draggable="false" />
               </div>
               <div class="card-products-body">
@@ -644,7 +648,7 @@
             <li class="card-products">
               <div class="img-products">
                 <img
-                  src="https://s3-alpha-sig.figma.com/img/292c/6a99/394d05a7bb7c8ac00dfc3cf4cf4b118a?Expires=1740355200&Key-Pair-Id=APKAQ4GOSFWCW27IBOMQ&Signature=j~vRrqQxKkm8eKuxqWXHhVGrVmQePlnPT0C4kz20f8L5U8K7dr31Hb-Sip6EPHCj1sgcd6gnzc2ltZ3cJ2jYarW7CKoJpTHZcjYxb9CrWHfp9xzgqICRGMG-dUSGapm-GX7ZmE1MHL6SU~q4fxNzl5qxyzD0Rm4rhzPpg~CjMC53dJGYje~D3jJ4sxaYWNINjVCZfHi~idsTMgfw1d2Ps-h9PTNQEd~n~iK1tImyukZ-UJvBXP5ojnwBOR6VEVKT4xjiVvb~85-TRYUcrUlo6Bn0sQOcpuJruK5YKMjzz4oNSx5Hy6Z31fSO~jF9AzOXLnnivpFBSL3z7R5zLR2eAQ__"
+                src="./img/new2.png"                  
                   alt="Product Img" draggable="false" />
               </div>
               <div class="card-products-body">
@@ -659,7 +663,7 @@
             <li class="card-products">
               <div class="img-products">
                 <img
-                  src="https://s3-alpha-sig.figma.com/img/def7/64fb/b8e83bdbe022eda36b4e6f470ecce4a9?Expires=1740355200&Key-Pair-Id=APKAQ4GOSFWCW27IBOMQ&Signature=CT~2APuZRsgrhmkDHyptdACk~6and4GA2E81YqxmD3A4QNIsBfjVyf~h~dpLnSAjqzX58SkBzHfi1aVr~9sk98OqBb7LV7UgMdYZ3mQnLV7lFW8OKZQcs8PwZz49kcPm6uox4rsnF5MtRZTagBfEwaeKkwKnMdP98eoIm1Ea3pB0VmyabbnZaFTsro7oPsiFhdtlPWEuJ562LEpz~yBrWFTIGNd~yAbklhEHYJQ0LMT2rFql7DtTdEtSnWjTFQ8PmyIbmeMA2bKwJtl4HBcVu78hd83CZoizR1Z2voR0FgLlDBbxI-7x0ksORrAWTxk2O6Fkd2CZRBvzXl465~5l6A__"
+                src="./img/new3.png"                  
                   alt="Product Img" draggable="false" />
               </div>
               <div class="card-products-body">
@@ -674,7 +678,7 @@
             <li class="card-products">
               <div class="img-products">
                 <img
-                  src="https://s3-alpha-sig.figma.com/img/5062/b3d8/cdd5bf4ae528be397beb0a425bdb0e9d?Expires=1740355200&Key-Pair-Id=APKAQ4GOSFWCW27IBOMQ&Signature=KV9YirVMDyNjqVlDnfVrxbL-RvXEdSeM-SibYJ4K~Qt~HkJrFfeHbhnka5cn8izCabZCHObdKSvhYgJgekvbifl0oPwZI8u0W85Bg1MZRSwd7b~C2z~uFom~JZc9QgHITe~x8tb0m35L4PHIItoKQ7Zo9lLqwBcVzpYaS4GFBERabviPX1TrBm~06fVfjSSIvdKnbKpJnF9v6CX0CNDFvWyj5RwX~CDKm4pqI96JI0Tt5yaDYOfnL7PySB22UmrUTt2XPMBloBvBT4Jk8S4FBbDdFuge69YUi19tNmRK7qpIHDMwWrrFxtwte7J7vvHBXEq5-D1~Tv6JnRMG7jKt0Q__"
+                src="./img/new4.png"                  
                   alt="Product Img" draggable="false" />
               </div>
               <div class="card-products-body">
