Add image navigation functionality and new buttons

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             <div class="clip-path-left-shporta"></div>
             <i class="fa-regular fa-user"></i>
             <i class="fa-solid fa-cart-shopping">
-              <!-- <img src="./img/Frame 10126613.png" alt=""> -->
+              <img src="./img/Frame 10126613.png" alt="" />
             </i>
             <div class="clip-path-right-shporta"></div>
           </div>
@@ -96,18 +96,23 @@
             srcset=""
           />
           <div class="arrow-container">
-            <button class="arrow-button left-arrow" disabled>
-              <i class="fa-solid fa-chevron-left"></i>
-            </button>
-            <button class="arrow-button right-arrow">
-              <i class="fa-solid fa-chevron-right"></i>
-            </button>
+            <img
+              class="arrow-button left-arrow"
+              src="./img/sales-btn-left.png"
+              alt=""
+              draggable="false"
+            />
+            <img
+              class="arrow-button right-arrow"
+              src="./img/sales-btn-right.png"
+              alt=""
+              draggable="false"
+            />
           </div>
         </div>
       </div>
       <div class="best-seller">
         <h2>BEST SELLERS</h2>
-
         <div class="cards-container">
           <div class="cards-header">
             <ul>
@@ -148,61 +153,75 @@
               </li>
             </ul>
           </div>
-          <div id="cards-pink" class="cards-main">
-            <div class="card">
-              <img src="./img/game1.png" class="card-img-top" alt="..." />
-              <div class="card-body">
-                <h6 class="card-title">Match It! Back To School Edition</h6>
-                <p class="card-text">Children's Ministry Deals</p>
+          <div class="best-seller-background">
+            <img
+              class="shape3"
+              draggable="false"
+              src="./img/shape3.png"
+              alt=""
+            />
+            <img
+              class="shape4"
+              draggable="false"
+              src="./img/shape4.png"
+              alt=""
+            />
+            <div id="cards-pink" class="cards-main">
+              <div class="card">
+                <img src="./img/game1.png" class="card-img-top" alt="..." />
+                <div class="card-body">
+                  <h6 class="card-title">Match It! Back To School Edition</h6>
+                  <p class="card-text">Children's Ministry Deals</p>
+                </div>
               </div>
-            </div>
-            <div class="card">
-              <img src="./img/game2.png" class="card-img-top" alt="..." />
-              <div class="card-body">
-                <h6 class="card-title">Match It! Back To School Edition</h6>
-                <p class="card-text">Children's Ministry Deals</p>
+              <div class="card">
+                <img src="./img/game2.png" class="card-img-top" alt="..." />
+                <div class="card-body">
+                  <h6 class="card-title">Match It! Back To School Edition</h6>
+                  <p class="card-text">Children's Ministry Deals</p>
+                </div>
               </div>
-            </div>
-            <div class="card">
-              <img src="./img/game3.png" class="card-img-top" alt="..." />
-              <div class="card-body">
-                <h6 class="card-title">Match It! Back To School Edition</h6>
-                <p class="card-text">Children's Ministry Deals</p>
+              <div class="card">
+                <img src="./img/game3.png" class="card-img-top" alt="..." />
+                <div class="card-body">
+                  <h6 class="card-title">Match It! Back To School Edition</h6>
+                  <p class="card-text">Children's Ministry Deals</p>
+                </div>
               </div>
-            </div>
-            <div class="card">
-              <img src="./img/game4.png" class="card-img-top" alt="..." />
-              <div class="card-body">
-                <h6 class="card-title">Match It! Back To School Edition</h6>
-                <p class="card-text">Children's Ministry Deals</p>
+              <div class="card">
+                <img src="./img/game4.png" class="card-img-top" alt="..." />
+                <div class="card-body">
+                  <h6 class="card-title">Match It! Back To School Edition</h6>
+                  <p class="card-text">Children's Ministry Deals</p>
+                </div>
               </div>
-            </div>
-            <div class="card">
-              <img src="./img/game5.png" class="card-img-top" alt="..." />
-              <div class="card-body">
-                <h6 class="card-title">Match It! Back To School Edition</h6>
-                <p class="card-text">Children's Ministry Deals</p>
+              <div class="card">
+                <img src="./img/game5.png" class="card-img-top" alt="..." />
+                <div class="card-body">
+                  <h6 class="card-title">Match It! Back To School Edition</h6>
+                  <p class="card-text">Children's Ministry Deals</p>
+                </div>
               </div>
-            </div>
-            <div class="card">
-              <img src="./img/game6.png" class="card-img-top" alt="..." />
-              <div class="card-body">
-                <h6 class="card-title">Match It! Back To School Edition</h6>
-                <p class="card-text">Children's Ministry Deals</p>
+              <div class="card">
+                <img src="./img/game6.png" class="card-img-top" alt="..." />
+                <div class="card-body">
+                  <h6 class="card-title">Match It! Back To School Edition</h6>
+                  <p class="card-text">Children's Ministry Deals</p>
+                </div>
               </div>
-            </div>
-            <div class="card">
-              <img src="./img/game7.png" class="card-img-top" alt="..." />
-              <div class="card-body">
-                <h6 class="card-title">Match It! Back To School Edition</h6>
-                <p class="card-text">Children's Ministry Deals</p>
+              <div class="card">
+                <img src="./img/game7.png" class="card-img-top" alt="..." />
+                <div class="card-body">
+                  <h6 class="card-title">Match It! Back To School Edition</h6>
+                  <p class="card-text">Children's Ministry Deals</p>
+                </div>
               </div>
-            </div>
-            <div class="card">
-              <img src="./img/game8.png" class="card-img-top" alt="..." />
-              <div class="card-body">
-                <h6 class="card-title">Match It! Back To School Edition</h6>
-                <p class="card-text">Children's Ministry Deals</p>
+              <div class="card">
+                <img src="./img/game8.png" class="card-img-top" alt="..." />
+                <div class="card-body">
+                  <h6 class="card-title">Match It! Back To School Edition</h6>
+                  <p class="card-text">Children's Ministry Deals</p>
+                </div>
               </div>
             </div>
           </div>
@@ -256,6 +275,8 @@
               style="width: 500px; height: 260px"
             />
           </div>
+          <img class="shape5" draggable="false" src="./img/shape5.png" alt="" />
+          <img class="shape6" draggable="false" src="./img/shape6.png" alt="" />
           <div class="contents-des">
             <h2>Lunchbox Shuffle</h2>
             <h5>Children's Ministry Deals</h5>
@@ -281,6 +302,8 @@
           />
         </div>
         <div class="submit">
+          <img class="shape7" draggable="false" src="./img/shape7.png" alt="" />
+          <img class="shape8" draggable="false" src="./img/shape8.png" alt="" />
           <div class="description">
             <h2>Want more free stuff?</h2>
             <p>
@@ -358,116 +381,134 @@
               </li>
             </ul>
           </div>
-          <div id="cards-blue" class="cards-main">
-            <div class="card">
-              <img
-                src="./img/second-game1.png"
-                class="card-img-top"
-                alt="..."
-              />
-              <div class="card-body">
-                <h6 class="card-title">Match It! Back To School Edition</h6>
-                <p class="card-text">Children's Ministry Deals</p>
+          <div class="best-seller-background" id="cards-blue">
+            <img
+              class="shape9"
+              draggable="false"
+              src="./img/shape9.png"
+              alt=""
+            />
+            <img
+              class="shape10"
+              draggable="false"
+              src="./img/shape10.png"
+              alt=""
+            />
+            <div class="cards-main" id="latest-cards-main">
+              <div class="card">
+                <img
+                  src="./img/second-game1.png"
+                  class="card-img-top"
+                  alt="..."
+                />
+                <div class="card-body">
+                  <h6 class="card-title">Match It! Back To School Edition</h6>
+                  <p class="card-text">Children's Ministry Deals</p>
+                </div>
               </div>
-            </div>
-            <div class="card">
-              <img
-                src="./img/second-game2.png"
-                class="card-img-top"
-                alt="..."
-              />
-              <div class="card-body">
-                <h6 class="card-title">Match It! Back To School Edition</h6>
-                <p class="card-text">Children's Ministry Deals</p>
+              <div class="card">
+                <img
+                  src="./img/second-game2.png"
+                  class="card-img-top"
+                  alt="..."
+                />
+                <div class="card-body">
+                  <h6 class="card-title">Match It! Back To School Edition</h6>
+                  <p class="card-text">Children's Ministry Deals</p>
+                </div>
               </div>
-            </div>
-            <div class="card">
-              <img
-                src="./img/second-game3.png"
-                class="card-img-top"
-                alt="..."
-              />
-              <div class="card-body">
-                <h6 class="card-title">Match It! Back To School Edition</h6>
-                <p class="card-text">Children's Ministry Deals</p>
+              <div class="card">
+                <img
+                  src="./img/second-game3.png"
+                  class="card-img-top"
+                  alt="..."
+                />
+                <div class="card-body">
+                  <h6 class="card-title">Match It! Back To School Edition</h6>
+                  <p class="card-text">Children's Ministry Deals</p>
+                </div>
               </div>
-            </div>
-            <div class="card">
-              <img
-                src="./img/second-game4.png"
-                class="card-img-top"
-                alt="..."
-              />
-              <div class="card-body">
-                <h6 class="card-title">Match It! Back To School Edition</h6>
-                <p class="card-text">Children's Ministry Deals</p>
+              <div class="card">
+                <img
+                  src="./img/second-game4.png"
+                  class="card-img-top"
+                  alt="..."
+                />
+                <div class="card-body">
+                  <h6 class="card-title">Match It! Back To School Edition</h6>
+                  <p class="card-text">Children's Ministry Deals</p>
+                </div>
               </div>
-            </div>
-            <div class="card">
-              <img
-                src="./img/second-game5.png"
-                class="card-img-top"
-                alt="..."
-              />
-              <div class="card-body">
-                <h6 class="card-title">Match It! Back To School Edition</h6>
-                <p class="card-text">Children's Ministry Deals</p>
+              <div class="card">
+                <img
+                  src="./img/second-game5.png"
+                  class="card-img-top"
+                  alt="..."
+                />
+                <div class="card-body">
+                  <h6 class="card-title">Match It! Back To School Edition</h6>
+                  <p class="card-text">Children's Ministry Deals</p>
+                </div>
               </div>
-            </div>
-            <div class="card">
-              <img
-                src="./img/second-game6.png"
-                class="card-img-top"
-                alt="..."
-              />
-              <div class="card-body">
-                <h6 class="card-title">Match It! Back To School Edition</h6>
-                <p class="card-text">Children's Ministry Deals</p>
+              <div class="card">
+                <img
+                  src="./img/second-game6.png"
+                  class="card-img-top"
+                  alt="..."
+                />
+                <div class="card-body">
+                  <h6 class="card-title">Match It! Back To School Edition</h6>
+                  <p class="card-text">Children's Ministry Deals</p>
+                </div>
               </div>
-            </div>
-            <div class="card">
-              <img
-                src="./img/second-game7.png"
-                class="card-img-top"
-                alt="..."
-              />
-              <div class="card-body">
-                <h6 class="card-title">Match It! Back To School Edition</h6>
-                <p class="card-text">Children's Ministry Deals</p>
+              <div class="card">
+                <img
+                  src="./img/second-game7.png"
+                  class="card-img-top"
+                  alt="..."
+                />
+                <div class="card-body">
+                  <h6 class="card-title">Match It! Back To School Edition</h6>
+                  <p class="card-text">Children's Ministry Deals</p>
+                </div>
               </div>
-            </div>
-            <div class="card">
-              <img
-                src="./img/second-game8.png"
-                class="card-img-top"
-                alt="..."
-              />
-              <div class="card-body">
-                <h6 class="card-title">Match It! Back To School Edition</h6>
-                <p class="card-text">Children's Ministry Deals</p>
+              <div class="card">
+                <img
+                  src="./img/second-game8.png"
+                  class="card-img-top"
+                  alt="..."
+                />
+                <div class="card-body">
+                  <h6 class="card-title">Match It! Back To School Edition</h6>
+                  <p class="card-text">Children's Ministry Deals</p>
+                </div>
               </div>
             </div>
           </div>
         </div>
       </div>
-      <div class="second-mini-game">
-        <img
-          src="./img/servicepack_cosmicwonder_thumbnail.png"
-          alt=""
-          srcset=""
-        />
-        <div class="contents-second-des">
-          <h2>Cosmic Wonder</h2>
-          <span>Children's Ministry Deals</span>
-          <p>
-            This game video will challenge kids to keep track of specific lunch
-            boxes as they are shuffled around on the screen. Whoever gets the
-            most right, wins!
-          </p>
-          <div class="clip-path-btn">
-            <div class="clip-path-left-bubble"></div>
-            <button class="play-now">Play Now</button>
-            <div class="clip-path-right-bubble"></div>
+      <div class="shapes-holder">
+        <img class="shape11" draggable="false" src="./img/shape11.png" alt="" />
+        <img class="shape12" draggable="false" src="./img/shape12.png" alt="" />
+        <div class="second-mini-game">
+          <img
+            src="./img/servicepack_cosmicwonder_thumbnail.png"
+            alt=""
+            srcset=""
+          />
+          <div class="contents-second-des">
+            <h2>Cosmic Wonder</h2>
+            <span>Children's Ministry Deals</span>
+            <p>
+              This game video will challenge kids to keep track of specific
+              lunch boxes as they are shuffled around on the screen. Whoever
+              gets the most right, wins!
+            </p>
+            <div class="clip-path-btn">
+              <div class="clip-path-left-bubble"></div>
+              <button class="play-now">Play Now</button>
+              <div class="clip-path-right-bubble"></div>
+            </div>
           </div>
         </div>
       </div>
@@ -567,7 +608,22 @@
             </button>
           </div>
         </div>
-        <div class="feat-background"></div>
+        <div class="feat-background">
+          <div class="shapes-holder">
+            <img
+              class="shape13"
+              draggable="false"
+              src="./img/shape13.png"
+              alt=""
+            />
+            <img
+              class="shape14"
+              draggable="false"
+              src="./img/shape14.png"
+              alt=""
+            />
+          </div>
+        </div>
       </div>
       <div class="reviews">
         <h2>WHAT THEY SAY ABOUT US</h2>
@@ -672,6 +728,20 @@
       </div>
       <div class="new-products">
         <h2>NEW Products</h2>
+        <div class="new-products-shapes">
+          <img
+            class="shape15"
+            draggable="false"
+            src="./img/shape15.png"
+            alt=""
+          />
+          <img
+            class="shape16"
+            draggable="false"
+            src="./img/shape16.png"
+            alt=""
+          />
+        </div>
         <div class="products-body">
           <div class="product-wrapper">
             <i id="left-new" class="">
@@ -822,6 +892,9 @@
         </div>
       </div>
       <div class="latest-news">
+        <img class="shape17" draggable="false" src="./img/shape17.png" alt="" />
+        <img class="shape18" draggable="false" src="./img/shape18.png" alt="" />
+        <img class="shape19" draggable="false" src="./img/shape19.png" alt="" />
         <div class="blogs-container">
           <h1>Latest from Worshiphouse Kids Blog!</h1>
           <p>
@@ -1056,6 +1129,8 @@
         <p>© 2024 WorshipHouse Kids. All Rights Reserved.</p>
         <a href="">Help</a>
       </div>
+      <img class="shape20" draggable="false" src="./img/shape20.png" alt="" />
+      <img class="shape21" draggable="false" src="./img/shape21.png" alt="" />
     </footer>
 
     <script src="script.js" defer></script>
